; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_sslapitest.c_new_parse_cb.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_sslapitest.c_new_parse_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@srvparsenewcb = common dso_local global i32 0, align 4
@clntparsenewcb = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32, i8*, i64, i32*, i64, i32*, i8*)* @new_parse_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @new_parse_cb(i32* %0, i32 %1, i32 %2, i8* %3, i64 %4, i32* %5, i64 %6, i32* %7, i8* %8) #0 {
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i8*, align 8
  %15 = alloca i64, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i64, align 8
  %18 = alloca i32*, align 8
  %19 = alloca i8*, align 8
  %20 = alloca i32*, align 8
  store i32* %0, i32** %11, align 8
  store i32 %1, i32* %12, align 4
  store i32 %2, i32* %13, align 4
  store i8* %3, i8** %14, align 8
  store i64 %4, i64* %15, align 8
  store i32* %5, i32** %16, align 8
  store i64 %6, i64* %17, align 8
  store i32* %7, i32** %18, align 8
  store i8* %8, i8** %19, align 8
  %21 = load i8*, i8** %19, align 8
  %22 = bitcast i8* %21 to i32*
  store i32* %22, i32** %20, align 8
  %23 = load i32*, i32** %11, align 8
  %24 = call i32 @SSL_is_server(i32* %23)
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %29

26:                                               ; preds = %9
  %27 = load i32, i32* @srvparsenewcb, align 4
  %28 = add nsw i32 %27, 1
  store i32 %28, i32* @srvparsenewcb, align 4
  br label %32

29:                                               ; preds = %9
  %30 = load i32, i32* @clntparsenewcb, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* @clntparsenewcb, align 4
  br label %32

32:                                               ; preds = %29, %26
  %33 = load i32*, i32** %20, align 8
  %34 = load i32, i32* %33, align 4
  %35 = load i32*, i32** %11, align 8
  %36 = call i32 @SSL_is_server(i32* %35)
  %37 = icmp ne i32 %34, %36
  br i1 %37, label %46, label %38

38:                                               ; preds = %32
  %39 = load i64, i64* %15, align 8
  %40 = icmp ne i64 %39, 1
  br i1 %40, label %46, label %41

41:                                               ; preds = %38
  %42 = load i8*, i8** %14, align 8
  %43 = load i8, i8* %42, align 1
  %44 = zext i8 %43 to i32
  %45 = icmp ne i32 %44, 1
  br i1 %45, label %46, label %47

46:                                               ; preds = %41, %38, %32
  store i32 -1, i32* %10, align 4
  br label %48

47:                                               ; preds = %41
  store i32 1, i32* %10, align 4
  br label %48

48:                                               ; preds = %47, %46
  %49 = load i32, i32* %10, align 4
  ret i32 %49
}

declare dso_local i32 @SSL_is_server(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
